--- a/TestBitrise/TestBitrise/Base.lproj/Main.storyboard
+++ b/TestBitrise/TestBitrise/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestBitrise" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="TestBitrise" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,6 +32,9 @@
                             <constraint firstItem="5YM-Sn-HqL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="lwi-Ph-O1d"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="5YM-Sn-HqL" id="4re-dX-eo7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
